Obmin 69 random cached titles (#274)
* [OBMIN-69] A new endpoint created for returning random 12 advertisement (cached by Spring Cache)

* [OBMIN-69] Optimized security workflow timing and made some refactoring of touched classes

* [OBMIN-69] Added the product page to exclusions

* [OBMIN-69] Fixed cache overload and created API that return total advertisements amount.